--- a/merging__predicted_sRNAs.ipynb
+++ b/merging__predicted_sRNAs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [
     {
@@ -407,17 +407,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "number_of_ids_overlapping = {}\n",
-    "\n",
-    "for key, value in all_overlaps.items():\n",
-    "    number_of_ids_overlapping[key] = [len(value)]\n",
-    "\n",
-    "df = pd.DataFrame(number_of_ids_overlapping)\n",
-    "df = df.T\n",
-    "df.columns = ['id_count']\n",
-    "\n",
-    "df.index.name = 'id1'\n",
-    "df.reset_index(inplace=True)"
+    "if run_all == True:\n",
+    "    number_of_ids_overlapping = {}\n",
+    "    \n",
+    "    for key, value in all_overlaps.items():\n",
+    "        number_of_ids_overlapping[key] = [len(value)]\n",
+    "    \n",
+    "    df = pd.DataFrame(number_of_ids_overlapping)\n",
+    "    df = df.T\n",
+    "    df.columns = ['id_count']\n",
+    "    \n",
+    "    df.index.name = 'id1'\n",
+    "    df.reset_index(inplace=True)\n",
+    "    df.to_csv('/Users/thomasnicholson/phd/RNASeq/srna_seqs/version_1/predicted/representative_ids.csv', index=False)"
    ]
   },
   {
@@ -425,9 +427,7 @@
    "execution_count": 174,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df.to_csv('/Users/thomasnicholson/phd/RNASeq/srna_seqs/version_1/predicted/representative_ids.csv', index=False)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -481,168 +481,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 261,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>percentage</th>\n",
-       "      <th>total</th>\n",
-       "      <th>count</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>GCA_000281215.1_63_GCA_002208745.1_77</td>\n",
-       "      <td>1.0000</td>\n",
-       "      <td>16</td>\n",
-       "      <td>16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>GCA_000007565.2_2_GCA_000281215.1_63</td>\n",
-       "      <td>0.4375</td>\n",
-       "      <td>16</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>GCA_000017745.1_1104_GCA_000017765.1_281</td>\n",
-       "      <td>0.8429</td>\n",
-       "      <td>331</td>\n",
-       "      <td>279</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>GCA_000007405.1_589_GCA_000497505.1_329</td>\n",
-       "      <td>1.0000</td>\n",
-       "      <td>19</td>\n",
-       "      <td>19</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>GCA_000497505.1_329_GCA_000747565.1_531</td>\n",
-       "      <td>0.7000</td>\n",
-       "      <td>20</td>\n",
-       "      <td>14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>42268</td>\n",
-       "      <td>GCA_000281215.1_288_GCA_000281215.1_289</td>\n",
-       "      <td>1.0000</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>42269</td>\n",
-       "      <td>GCA_000281215.1_289_GCA_000281215.1_301</td>\n",
-       "      <td>1.0000</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>42270</td>\n",
-       "      <td>GCA_000006765.1_838_GCA_900243355.1_755</td>\n",
-       "      <td>1.0000</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>42271</td>\n",
-       "      <td>GCA_000006765.1_841_GCA_900243355.1_774</td>\n",
-       "      <td>1.0000</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>42272</td>\n",
-       "      <td>GCA_002355295.1_554_GCA_002355295.1_556</td>\n",
-       "      <td>1.0000</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>42273 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                             id  percentage  total  count\n",
-       "0         GCA_000281215.1_63_GCA_002208745.1_77      1.0000     16     16\n",
-       "1          GCA_000007565.2_2_GCA_000281215.1_63      0.4375     16      7\n",
-       "2      GCA_000017745.1_1104_GCA_000017765.1_281      0.8429    331    279\n",
-       "3       GCA_000007405.1_589_GCA_000497505.1_329      1.0000     19     19\n",
-       "4       GCA_000497505.1_329_GCA_000747565.1_531      0.7000     20     14\n",
-       "...                                         ...         ...    ...    ...\n",
-       "42268   GCA_000281215.1_288_GCA_000281215.1_289      1.0000      2      2\n",
-       "42269   GCA_000281215.1_289_GCA_000281215.1_301      1.0000      2      2\n",
-       "42270   GCA_000006765.1_838_GCA_900243355.1_755      1.0000      4      4\n",
-       "42271   GCA_000006765.1_841_GCA_900243355.1_774      1.0000      4      4\n",
-       "42272   GCA_002355295.1_554_GCA_002355295.1_556      1.0000      2      2\n",
-       "\n",
-       "[42273 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 72,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df = pd.DataFrame.from_dict(query_counts, orient='index', columns = ['percentage', 'total', 'count'])\n",
-    "df.index.name = 'id'\n",
-    "df.reset_index(inplace=True)\n",
-    "df"
+    "if run_all == True:\n",
+    "    df = pd.DataFrame.from_dict(query_counts, orient='index', columns = ['percentage', 'total', 'count'])\n",
+    "    df.index.name = 'id'\n",
+    "    df.reset_index(inplace=True)\n",
+    "    df.to_csv('/Users/thomasnicholson/phd/RNASeq/srna_seqs/version_1/predicted/overlap_values_3.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 270,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df.to_csv('/Users/thomasnicholson/phd/RNASeq/srna_seqs/version_1/predicted/overlap_values_3.csv', index=False)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 277,
    "metadata": {},
    "outputs": [],
    "source": [
-    "combined_d = {}\n",
-    "ids_checked = []\n",
-    "for query in query_ids:\n",
-    "    if query not in ids_checked:\n",
-    "        combined_d, ids_checked = srna.combined_alignments(query = query, combined_d = combined_d, ids_checked = ids_checked, query_matches = query_matches)\n"
+    "if run_all == True:\n",
+    "    with open('/Users/thomasnicholson/phd/RNASeq/python_files/query_matches.json', 'r') as read_file:\n",
+    "            query_matches = json.load(read_file)\n",
+    "    \n",
+    "    combined_d = {}\n",
+    "    ids_checked = []\n",
+    "    for query in query_ids:\n",
+    "        if query not in ids_checked:\n",
+    "            combined_d, ids_checked = combined_alignments(query = query, combined_d = combined_d, ids_checked = ids_checked, query_matches = query_matches)\n",
+    "\n",
+    "    json_combined_d = json.dumps(combined_d)\n",
+    "    file = open('/Users/thomasnicholson/phd/RNASeq/python_files/combined_d.json', 'w')\n",
+    "    file.write(json_combined_d)\n",
+    "    file.close()\n",
+    "else:\n",
+    "    with open('/Users/thomasnicholson/phd/RNASeq/python_files/combined_d.json', 'r') as read_file:\n",
+    "        combined_d = json.load(read_file)  "
    ]
   },
   {
