--- a/merging__predicted_sRNAs.ipynb
+++ b/merging__predicted_sRNAs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -18,6 +18,7 @@
    "source": [
     "import sys\n",
     "from Bio import SeqIO\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import matplotlib as plt\n",
@@ -30343,6 +30344,45 @@
     "            taxonomy_levels.append(level_name)\n",
     "\n",
     "print(taxonomy_levels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from Bio.SeqUtils import GC\n",
+    "inFile = \"/Users/thomasnicholson/phd/RNASeq/srna_seqs/version_1/predicted/large_alignments/fasta/alignments_GCA_001559675.1_549.fna\"\n",
+    "record = list(SeqIO.parse(inFile, \"fasta\"))\n",
+    "\n",
+    "\n",
+    "values = []\n",
+    "for my_seq in record:\n",
+    "    id = my_seq.id\n",
+    "    gc_value = GC(my_seq.seq)\n",
+    "    values.append(gc_value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[51.274787535410766, 51.274787535410766, 51.274787535410766, 51.274787535410766, 51.274787535410766, 51.274787535410766, 50.991501416430594, 50.991501416430594, 50.42492917847026, 54.11764705882353, 54.11764705882353, 54.11764705882353, 54.11764705882353, 54.11764705882353, 53.8235294117647, 53.0791788856305, 53.0791788856305, 54.437869822485204, 54.142011834319526, 52.55681818181818, 48.10495626822158, 44.37689969604863, 58.610271903323266, 46.706586826347305, 65.13761467889908, 47.09480122324159, 42.72997032640949, 44.582043343653254, 40.06211180124224, 37.2093023255814, 71.33550488599349, 63.38461538461539, 37.764350453172206, 38.006230529595015, 42.68292682926829, 45.61933534743203]\n",
+      "50.69919448229464\n",
+      "7.186095422698659\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(values)\n",
+    "print(np.mean(values))\n",
+    "print(np.std(values))"
    ]
   }
  ],
