update to save work

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import xml.etree.cElementTree as et\n",
     "\n",
     "\n",
     "\n"
@@ -20,10 +21,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "ParseError",
+     "evalue": "junk after document element: line 45, column 0 (<string>)",
+     "output_type": "error",
+     "traceback": [
+      "Traceback \u001b[0;36m(most recent call last)\u001b[0m:\n",
+      "  File \u001b[1;32m\"/Users/thomasnicholson/anaconda3/lib/python3.6/site-packages/IPython/core/interactiveshell.py\"\u001b[0m, line \u001b[1;32m3343\u001b[0m, in \u001b[1;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "  File \u001b[1;32m\"<ipython-input-3-50ad009a49d6>\"\u001b[0m, line \u001b[1;32m1\u001b[0m, in \u001b[1;35m<module>\u001b[0m\n    tree=et.parse('/Users/thomasnicholson/Downloads/metagenomes.xml')\n",
+      "  File \u001b[1;32m\"/Users/thomasnicholson/anaconda3/lib/python3.6/xml/etree/ElementTree.py\"\u001b[0m, line \u001b[1;32m1196\u001b[0m, in \u001b[1;35mparse\u001b[0m\n    tree.parse(source, parser)\n",
+      "\u001b[0;36m  File \u001b[0;32m\"/Users/thomasnicholson/anaconda3/lib/python3.6/xml/etree/ElementTree.py\"\u001b[0;36m, line \u001b[0;32m597\u001b[0;36m, in \u001b[0;35mparse\u001b[0;36m\u001b[0m\n\u001b[0;31m    self._root = parser._parse_whole(source)\u001b[0m\n",
+      "\u001b[0;36m  File \u001b[0;32m\"<string>\"\u001b[0;36m, line \u001b[0;32munknown\u001b[0m\n\u001b[0;31mParseError\u001b[0m\u001b[0;31m:\u001b[0m junk after document element: line 45, column 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "tree=et.parse('/Users/thomasnicholson/Downloads/metagenomes.xml')\n",
+    "\n",
+    "root=tree.getroot()"
+   ]
   }
  ],
  "metadata": {
